# ad-hoc-examples-c

./: .gitignore  README
archive/: word_entry.h  word_main.cc
src/: .gitignore  CMakeLists.txt  Makefile  README  getline_demo.c  llnl1.c  llnl_cv1.c  regex-demo.c  regex-help.c  regex-help.h  strbuffer.c  strbuffer.h  strbuffer_demo.c  word_entry.c  word_entry.cc  word_entry.h  word_entry_tests.cc  word_entry_tests2.cc  word_main.c
